Fixed alignment of table sort arrow.

--- a/src/encoded/static/scss/encoded/modules/_tables.scss
+++ b/src/encoded/static/scss/encoded/modules/_tables.scss
@@ -14,7 +14,6 @@ border-radius: 0 0 0 3px;
 
 .sortdirection {
 	float: right;
-    margin-right: -22px;
     margin-top: 2px;
 }
 
